--- a/libretranslate/templates/index.html
+++ b/libretranslate/templates/index.html
@@ -22,7 +22,7 @@
 
 	<meta property="og:title" content="Nexus" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://metapod.odinslibrary.net" />
+	<meta property="og:url" content="https://nexus.odinslibrary.net" />
 	<meta property="og:image"
 		content="https://user-images.githubusercontent.com/1951843/102724116-32a6df00-42db-11eb-8cc0-129ab39cdfb5.png" />
 
@@ -45,7 +45,10 @@
 	<div id="app" class="main-container">
 		<header class="app-header">
 			<div class="logo-container">
-				<img src="{{ url_for('static', filename='icon.svg') }}" alt="Nexus Logo" class="logo">
+				<img src="https://minastirith.b-cdn.net/apps/nexus/nexus-dark.png" alt="Nexus Logo"
+					class="logo logo-light">
+				<img src="https://minastirith.b-cdn.net/apps/nexus/nexus-light.png" alt="Nexus Logo"
+					class="logo logo-dark">
 				<span class="logo-text">Nexus</span>
 			</div>
 			<nav class="app-nav">
