--- a/libretranslate/templates/index.html
+++ b/libretranslate/templates/index.html
@@ -16,7 +16,7 @@
 	<title>{{ frontend_title }}</title>
 	{% endif %}
 
-	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+	<link rel="shortcut icon" href="https://minastirith.b-cdn.net/apps/nexus/nexus-dark.png">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/apple-style.css') }}?v={{ version }}">
 
@@ -52,13 +52,13 @@
 				<span class="logo-text">Nexus</span>
 			</div>
 			<nav class="app-nav">
-				{% if get_api_key_link %}
+				<!-- {% if get_api_key_link %}
 				<a href="{{ get_api_key_link }}" class="nav-link">{{ _h("Get API Key") }}</a>
 				{% endif %}
 				{% if api_keys %}
 				<a href="javascript:setApiKey()" class="nav-link-icon" title="{{ _h('Set API Key') }}"
 					aria-label="{{ _h('Set API Key') }}"><i class="icon-key"></i></a>
-				{% endif %}
+				{% endif %} -->
 				<a href="javascript:toggleColorScheme()" class="nav-link-icon"
 					title="{{ _h('Toggle dark/light mode') }}" aria-label="{{ _h('Toggle dark/light mode') }}"><i
 						class="icon-theme"></i></a>
